--- a/ThothUI/client/index.html
+++ b/ThothUI/client/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.min.css">
   <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap-material-design/dist/css/ripples.min.css">
   <link rel="stylesheet" href="./bower_components/nvd3/build/nv.d3.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
   
   <div class="navbar navbar-inverse" ng-controller="HeaderController">
@@ -34,10 +35,15 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">User
+            <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown"> {{user.user}}
               <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="">Login</a></li>
+              <li ng-if="user_status" ><a href="">Login</a></li>
+              <li ng-if="!user_status" >
+                <div ng-controller="logoutController">
+                  <a ng-click='logout()' class="btn btn-default">Logout</a>
+                </div>
+              </li>
             </ul>
           </li>
         </ul>
