added error app api at server side

--- a/thothEyes/newUI/node.html
+++ b/thothEyes/newUI/node.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app="thothEyes">
 <head>
 	<title></title>
 
@@ -14,8 +14,6 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-
 	<style type="text/css">
 	
 	.nodeblock{
@@ -34,19 +32,7 @@
 		margin-bottom: 15px;
 		list-style-type: none;
 	}
-
-
-
-
-
-
-
-
-
-
 	/*modal*/
-
-
 	.modal-item {
 	  /* non-critical appearance styles */
 	  width: 95%;
@@ -72,18 +58,7 @@
 	  background-color: #ecf0f1;
 	}
 
-
-
-
-
-
-
-
-
 	/* Navigation Menu - Background */
-
-
-
 	.navigation {
 	  /* critical sizing and position styles */
 	  width: 100%;
@@ -94,7 +69,6 @@
 	  bottom: 0;
 	  left: 0;
 	  z-index: 0;
-	  
 	  /* non-critical appearance styles */
 	  list-style: none;
 	  background: white;
@@ -183,7 +157,6 @@
 	}
 
 	/* Additional non-critical styles */
-
 	h1, h3, p {
 	  max-width: 600px;
 	  margin: 0 auto 1em;
