--- a/thothEyes/voiceToText/tts.html
+++ b/thothEyes/voiceToText/tts.html
@@ -7,5 +7,6 @@
 <body>
 	<button class="butt js--triggerAnimation" onclick="responsiveVoice.speak('Hi I am Baymax.');" type="button" value="Play">Baymax</button>
 	<button class="butt js--triggerAnimation" onclick="responsiveVoice.speak('Error.');" type="button" value="Play">Error</button>
+	<button class="butt js--triggerAnimation" onclick="responsiveVoice.speak('I am Thoth manager. Can I help you?');" type="button" value="Play">Thoth</button>
 </body>
 </html>
