--- a/ThothUI/client/index.html
+++ b/ThothUI/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MEAN Auth</title>
+  <title>Thoth : controlpanel</title>
   <!-- styles -->
   <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.min.css">
@@ -40,7 +40,7 @@
 
         <ul ng-if="user_status === true " class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown"> {{user.user}}
+            <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-ng-model="user" data-toggle="dropdown"> {{ user }}
               <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li >
